--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML01</title>
 </head>
 <body>
     
-    <h1>hello world</h1>
+   <h1>My First Heading</h1>
+
+   <p>My First Paragraph</p>
+
+   <h2>Heading 2</h2>
+   <h2>Heading 3</h2>
+   <h2>Heading 4</h2>
+   <h2>Heading 5</h2>
+   <h2>Heading 6</h2>
+
+    <a href="https://www.w3schools.com">w3schools</a>
+
+    <br>
+
+    <img src="image.jpg" alt="image of me" width="104" height="142">
 
 </body>
 </html>
