feat: Combined the style and design above section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vercel: Build and deploy</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <!-- or -->
+    <link rel="stylesheet"
+    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
     
@@ -14,13 +20,17 @@
 
             <div class="left_side">
                 <div class="logo">
-                    Vercel
+                    <div class="logo-img">
+                        <figure>
+                            <img src="vercellogo.png" alt="vercel logo" width="100px">
+                        </figure>
+                    </div>
                 </div>
     
                 <div class="nav_links">
-                    <a href="">Products</a>
-                    <a href="">Solutions</a>
-                    <a href="">Resources</a>
+                    <a href="">Products <i class='bx bx-chevron-down'></i></a>
+                    <a href="">Solutions <i class='bx bx-chevron-down'></i></a>
+                    <a href="">Resources <i class='bx bx-chevron-down'></i></a>
                     <a href="">Enterprise</a>
                     <a href="">Docs</a>
                     <a href="">Pricing</a>
@@ -46,7 +56,7 @@
             <header>
 
                 <h1>Your complete platform for the web.</h1>
-                <p>Vercel provides the developer tools and cloud infrastructure to build, scale, and secure a faster, more personalized web.</p>
+                <p>Vercel provides the developer tools and cloud infrastructure <br> to build, scale, and secure a faster, more personalized web.</p>
 
                 <div class="main_home-button">
 
